# Matroskin

./: .gitignore  Notebook.py  README.md  cells_features.py  db_structures.py  get_data.py  index.py  metrics_utils.py  notebook_features.py  pyproject.toml  test.db
.github/workflows/: actions.yml
connector/: __init__.py  connector.py  get_data.py
examples/: config.yml  download_amazon.py  download_db.py  download_notebooks.py  examples_utils.py  get_notebooks.py  requirements.txt
examples/example_data/: example_mapping.json
matroskin/: __init__.py
matroskin/connector/: connector.py  db_structures.py  get_data.py
matroskin/notebook/: __init__.py  notebook.py  write_to_db.py
matroskin/processors/: __init__.py  code_processor.py  node_visitor.py
notebook/: __init__.py  notebook.py  write_to_db.py
notebook_analyzer/: __init__.py  main.py
notebook_analyzer/connector/: __init__.py  connector.py  db_structures.py  get_data.py
notebook_analyzer/examples/: __init__.py  app.py  download_amazon.py  download_db.py  download_scripts_from_dir.py  examples_utils.py
notebook_analyzer/notebook/: notebook.py  write_to_db.py
notebook_analyzer/processors/: __init__.py  cell_processor.py  code_processor.py  md_processor.py  node_visitor.py
processors/: __init__.py  cell_processor.py  code_processor.py  md_processor.py  metrics_utils.py  node_visitor.py
test/: config.yml  metrics_config.yml  metrics_test.py  test_utils.py  testing_config.yml
test/notebooks/: functions.ipynb  functions.yml
test/scripts/: functions.py  functions.yml  script.py  script.yml
(+6 files in other folders)
